--- a/examples/hello_world/Makefile
+++ b/examples/hello_world/Makefile
@@ -9,23 +9,27 @@ RRPC := rRPC
 NEED_GO_BUILD :=
 endif
 
-.PHONY: all server client clean go-build
+.PHONY: all server client openapi clean go-build
 
-all: server client
+all: server client openapi
 
 ifeq ($(NEED_GO_BUILD),1)
 server: go-build
 client: go-build
+openapi: go-build
 endif
 
-server:
+server: $(SCHEMA)
 	$(RRPC) server -o . -f $(SCHEMA)
 
-client:
+client: $(SCHEMA)
 	$(RRPC) client -o . -f $(SCHEMA)
+
+openapi: $(SCHEMA)
+	$(RRPC) openapi -o . -f $(SCHEMA)
 
 go-build:
 	cd $(ROOT) && go build
 
 clean:
-	rm -rf rpcserver rpc_client
+	rm -rf rpcserver rpc_client openapi.json
