Working on syntax highlight extension for vs code

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -9,6 +9,11 @@
   "categories": [
     "Programming Languages"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rapid-Vision/rRPC",
+    "directory": "extensions/vscode"
+  },
   "contributes": {
     "languages": [
       {
