Updated docs and vs code extension

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -2,7 +2,8 @@
   "name": "rrpc",
   "displayName": "rRPC",
   "description": "rRPC schema language support",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "publisher": "mishapankin",
   "engines": {
     "vscode": "^1.108.1"
   },
@@ -14,6 +15,7 @@
     "url": "https://github.com/Rapid-Vision/rRPC",
     "directory": "extensions/vscode"
   },
+  "icon": "logo.png",
   "contributes": {
     "languages": [
       {
