--- a/examples/hello_world/py_server/pyproject.toml
+++ b/examples/hello_world/py_server/pyproject.toml
@@ -1,11 +1,7 @@
 [project]
 name = "py-server"
 version = "0.1.0"
-description = "Add your description here"
+description = "Python rrpc server example"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "fastapi>=0.128.0",
-    "pydantic>=2.12.5",
-    "uvicorn>=0.40.0",
-]
+dependencies = ["fastapi>=0.128.0", "pydantic>=2.12.5", "uvicorn>=0.40.0"]
